src/test/run-pass/struct-deref.rs
struct Foo(int);

fn main() {
    let x: Foo = Foo(2);
    assert *x == 2;
}

